@@ -26,6 +26,7 @@ ans <- multiStart(par=p0, fn=hdp)
  
 # 69.523408062911   on Windows32 R-2.13.0 April 2011
 # 65.6121918520524  on Windows64 
+# 69.61717235396377 on Windows?? R-2.14.0 Nov 2011
 
 # 69.0642609408530  on Linux64   
 # 69.06426094085302 on Linux64 Ubuntu R-2.13.0 April 2011
@@ -37,9 +38,10 @@ ans <- multiStart(par=p0, fn=hdp)
 # 68.6429426963639  
 # 68.4364913774026  on Linux32  
 # good set to  67.5 with fuzz=2.0 before R-2.13.0 April 2011
-# good set to  68  with fuzz=2.0  before adjusting noimp to default 100 in BBsolve 
+# good set to  68   with fuzz=2.0 before adjusting noimp to default 100 in BBsolve 
+# good set to  67.5 with fuzz=2.5 as of R-2.14.0 Nov 2011
 good   <-      67.5
 z <- sum(ans$par[ans$converged,])
 
 print(z, digits=16)
-if(any(abs(good - z) > 2.0)) stop("BB test BBsolve HDP FAILED")
+if(any(abs(good - z) > 2.5)) stop("BB test multiStartHDP FAILED")
